--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,10 +26,6 @@ jobs:
 
       # Runs a set of commands using the runners shell
       - name: Run all tests
-        uses: matlab-actions/run-tests@v2
+        uses: matlab-actions/run-build@v2
         with:
-          source-folder: code
-
-      # You can use "run-build" to invoke the MATLAB build tool and run build tasks
-      #- name: Run the default "test" task in the build file
-      #   uses: matlab-actions/run-build@v2
+          tasks: test uninstallPackage
